--- a/package.json
+++ b/package.json
@@ -19,15 +19,18 @@
   },
   "devDependencies": {
     "@babel/core": "^7.17.10",
+    "@babel/plugin-transform-runtime": "^7.17.10",
     "@babel/preset-env": "^7.17.10",
     "@babel/preset-react": "^7.16.7",
     "@babel/preset-typescript": "^7.16.7",
+    "@babel/runtime": "^7.17.9",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.6",
     "@types/react": "^18.0.9",
     "@types/react-dom": "^18.0.3",
     "@typescript-eslint/eslint-plugin": "^5.23.0",
     "@typescript-eslint/parser": "^5.23.0",
     "babel-loader": "^8.2.5",
+    "copy-webpack-plugin": "^10.2.4",
     "css-loader": "^6.7.1",
     "eslint": "^8.15.0",
     "eslint-config-prettier": "^8.5.0",
@@ -44,20 +47,21 @@
     "style-loader": "^3.3.1",
     "typescript": "^4.6.4",
     "webpack": "^5.72.1",
+    "webpack-bundle-analyzer": "^4.5.0",
     "webpack-cli": "^4.9.2",
     "webpack-dev-server": "^4.9.0",
     "webpack-merge": "^5.8.0"
   },
   "lint-staged": {
     "src/**/*.{js,jsx,ts,tsx,json}": [
-        "eslint --fix"
-      ],
+      "eslint --fix"
+    ],
     "src/**/*.{js,jsx,ts,tsx,json,css,scss,md}": [
       "prettier --write"
     ]
   },
   "husky": {
-    "hooks" : {
+    "hooks": {
       "pre-commit": "lint-staged"
     }
   }
