--- a/package.json
+++ b/package.json
@@ -44,6 +44,8 @@
     "lint-staged": "^12.4.1",
     "prettier": "^2.6.2",
     "react-refresh": "^0.13.0",
+    "sass": "^1.56.2",
+    "sass-loader": "^13.2.0",
     "style-loader": "^3.3.1",
     "typescript": "^4.6.4",
     "webpack": "^5.72.1",
